[project]
name = "latest-build-instance"
description = "latest build for invenioRDM"
version = "14.0.0b99999999.dev0"
requires-python = ">= 3.12"

dependencies = [
  # 
  # We keep the dependency >= to always have latest 14
  #
  "invenio-app-rdm[opensearch2,s3]>=14.0.0b1.dev0",
  "python-dotenv>=0.21.0",
  "uwsgi>=2.0",
  "uwsgitop>=0.11",
  "uwsgi-tools>=1.1.1",
  "lxml-html-clean>=0.1.1",
  "latest-build", # this is not needed but kept for reference
  "invenio-cli",
  "apispec[marshmallow,yaml]>=6.8.3",
  "apispec-webframeworks>=1.2.0",
]

[tool.uv.sources]
latest_build = { workspace = true }
invenio-app-rdm = { git = "https://github.com/inveniosoftware/invenio-app-rdm.git", branch = "master" }

[tool.uv.workspace]
members = [
  "site",
]

[dependency-groups]
dev = [
    "flask-debugtoolbar>=0.16.0",
    "pdbpp>=0.11.7",
    "pytest-invenio>=4.0.0,<5.0.0",
    "ruff>=0.13.0",
]

[project.optional-dependencies]
sentry = [
    "sentry-sdk>=1.45,<2.0.0",
]
tests = [
    "pytest-invenio>=4.0.0,<5.0.0",
]
